--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,5 +34,11 @@ allprojects {
 
         google()
         maven { url 'https://www.jitpack.io' }
+
+        jcenter() {
+            content {
+                includeModule("com.yqritc", "android-scalablevideoview")
+            }
+        }
     }
 }
