--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.1.1",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
