--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.1.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "@types/react-native": "^0.65.5",
@@ -18,8 +19,11 @@
     "react-native": "0.66.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-indicators": "^0.17.0",
+    "react-native-orientation-locker": "^1.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
     "react-navigation-stack": "^2.10.4"
