--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-native": "0.66.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-indicators": "^0.17.0",
     "react-native-orientation-locker": "^1.3.1",
     "react-native-safe-area-context": "^3.3.2",
