--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
+    "react-native-wifi-reborn": "^4.4.0",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
